--- a/PackageTest/NugetPackageTest/NugetPackageCSharpTest.csproj
+++ b/PackageTest/NugetPackageTest/NugetPackageCSharpTest.csproj
@@ -4,7 +4,7 @@
   <Import Project="packages\xunit.runner.msbuild.2.1.0\build\portable-net45+win8+wp8+wpa81\xunit.runner.msbuild.props" Condition="Exists('packages\xunit.runner.msbuild.2.1.0\build\portable-net45+win8+wp8+wpa81\xunit.runner.msbuild.props')" />
   <Import Project="packages\xunit.core.2.1.0\build\portable-net45+win8+wp8+wpa81\xunit.core.props" Condition="Exists('packages\xunit.core.2.1.0\build\portable-net45+win8+wp8+wpa81\xunit.core.props')" />
   <PropertyGroup>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\</SolutionDir>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{41421AA6-CE53-4E96-933F-33C13493323A}</ProjectGuid>
@@ -66,10 +66,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\Generators\CSharp\CSharp.Tests\Utilities\ProcessOutputListener.cs">
+    <Compile Include="$(SolutionDir)\src\generator\CSharp.Tests\Utilities\ProcessOutputListener.cs">
       <Link>ProcessOutputListener.cs</Link>
     </Compile>
-    <Compile Include="..\Generators\CSharp\CSharp.Tests\Utilities\ServiceController.cs">
+    <Compile Include="$(SolutionDir)\src\generator\CSharp.Tests\Utilities\ServiceController.cs">
       <Link>ServiceController.cs</Link>
     </Compile>
     <Compile Include="PackageTests.cs" />
