--- a/Tools/RazorCompiler/RazorCompiler/RazorCompiler.csproj
+++ b/Tools/RazorCompiler/RazorCompiler/RazorCompiler.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.AspNet.Razor">
-      <HintPath>..\packages\Microsoft.AspNet.Razor.4.0.0-beta3\lib\net45\Microsoft.AspNet.Razor.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\Microsoft.AspNet.Razor.4.0.0-beta3\lib\net45\Microsoft.AspNet.Razor.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -49,7 +49,7 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
