--- a/src/client/Microsoft.Rest.ClientRuntime/project.json
+++ b/src/client/Microsoft.Rest.ClientRuntime/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.3.1",
+  "version": "2.3.1-*",
   "copyright": "Copyright (c) Microsoft Corporation",
   "title": "Client Runtime Library for Microsoft AutoRest Generated Clients",
   "description": "Infrastructure for error handling, tracing, and HttpClient pipeline configuration. Required by client libraries generated using AutoRest. \nSupported Platforms:\n  -   Portable Class Libraries\n  -   .NET Framework 4.5\n  -   Windows 8\n  -   Windows Phone 8.1\n  -   DotNet Core",
@@ -11,7 +11,7 @@
     "projectUrl": "https://github.com/Azure/AutoRest",
     "licenseUrl": "https://raw.githubusercontent.com/Microsoft/dotnet/master/LICENSE",
     "tags": [ "Microsoft AutoRest ClientRuntime REST" ],
-    "requireLicenseAcceptance":  true,
+    "requireLicenseAcceptance":  true
   },
 
   "buildOptions": {
@@ -33,7 +33,7 @@
       },
       "dependencies": {
         "Newtonsoft.Json": "6.0.8"
-      },
+      }
     },     
     "netstandard1.1": {
       "buildOptions": { "define": [ "PORTABLE" ] },
@@ -56,7 +56,7 @@
         "System.Runtime.Extensions": "4.1.0",
         "System.Text.RegularExpressions": "4.1.0",
         "System.Threading": "4.0.11",
-        "System.Xml.ReaderWriter": "4.0.11",
+        "System.Xml.ReaderWriter": "4.0.11"
       }
     },
     "netstandard1.5": {
@@ -80,7 +80,7 @@
         "System.Runtime.Extensions": "4.1.0",
         "System.Text.RegularExpressions": "4.1.0",
         "System.Threading": "4.0.11",
-        "System.Xml.ReaderWriter": "4.0.11",
+        "System.Xml.ReaderWriter": "4.0.11"
       }
     }
   }
