--- a/src/generator/AutoRest.CSharp.Unit.Tests/CSharp.Unit.Tests.csproj
+++ b/src/generator/AutoRest.CSharp.Unit.Tests/CSharp.Unit.Tests.csproj
@@ -49,11 +49,11 @@
     <Compile Include="TestExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="$(SolutionDir)\autorest\AutoRest.Core\AutoRest.Core.csproj">
+    <ProjectReference Include="..\..\core\AutoRest.Core\AutoRest.Core.csproj">
       <Project>{c876085f-9dc3-41f0-b7b4-17022cd84684}</Project>
       <Name>AutoRest.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\CSharp\AutoRest.Generator.CSharp.csproj">
+    <ProjectReference Include="..\AutoRest.CSharp\AutoRest.Generator.CSharp.csproj">
       <Project>{cc1eec95-41ef-44b6-8761-00fa3e647248}</Project>
       <Name>AutoRest.Generator.CSharp</Name>
     </ProjectReference>
